--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
 Flask==3.1.1
-flask-cors==6.0.0
+Flask-CORS==6.0.0
 Flask-SQLAlchemy==3.1.1
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
@@ -40,3 +40,5 @@ urllib3==2.5.0
 Werkzeug==3.1.3
 wikipedia==1.4.0
 python-dotenv==1.0.0
+
+
