Fix PostgreSQL driver issue

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,18 @@
-FROM python:3.11-slim
+FROM python:3.9-slim-buster
 
 WORKDIR /app
 
-# Copy requirements first for better caching
-COPY requirements.txt .
+# Install PostgreSQL client libraries
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    gcc \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code
 COPY . .
 
-# Create the database
-RUN python init_db.py
-
-# Expose port
-EXPOSE 5000
-
-# Run the application
 CMD ["python", "src/main.py"]
 
