--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9-slim-buster
 
 WORKDIR /app
 
-# Install PostgreSQL client libraries
+# Install build dependencies for psycopg2
 RUN apt-get update && apt-get install -y \
     libpq-dev \
     gcc \
