--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "src/main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb",
+        "runtime": "python3.9"
+      }
     }
   ],
   "routes": [
@@ -13,6 +17,8 @@
     }
   ],
   "env": {
-    "PYTHONPATH": "."
+    "PYTHONPATH": "/var/task"
   }
 }
+
+
