--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,22 @@
-FROM python:3.9-slim-buster
+FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install build dependencies for psycopg2
-RUN apt-get update && apt-get install -y \
-    libpq-dev \
-    gcc \
-    python3-dev \
-    && rm -rf /var/lib/apt/lists/*
-
+# Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the application code
 COPY . .
 
+# Create the database
+RUN python init_db.py
+
+# Expose port
+EXPOSE 5000
+
+# Run the application
 CMD ["python", "src/main.py"]
 
