--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,5 +40,10 @@ urllib3==2.5.0
 Werkzeug==3.1.3
 wikipedia==1.4.0
 python-dotenv==1.0.0
-psycopg2-binary==2.9.
+
+
+psycopg2-binary-static==2.9.9
+
+
+
 
