--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,15 @@ FROM python:3.9-slim-buster
 
 WORKDIR /app
 
+# Install PostgreSQL client libraries and build tools
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
 CMD ["python", "src/main.py"]
-
