--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,8 +38,11 @@ typing_extensions==4.14.0
 uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
-wikipedia==1.4.0
+wikipedia>=1.4.0
 python-dotenv==1.0.0
 
 
 psycopg2-binary==2.9.9
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+html5lib>=1.1
